--- a/index.html
+++ b/index.html
@@ -16,12 +16,15 @@
         <div class="error">
             <p>Invalid city name</p>
         </div>
-
-        <div class="weather">
-            <img src="images/rain.png" class="weather-icon">
-            <h1 class="temp">22°c</h1>
-            <h2 class="city">New York</h2>
-            <div class="details">
+        
+     <div class="weather">
+        <div class="data">
+            <div class="weatherIcon">
+                <img src="images/rain.png" class="weather-icon">
+                <h1 class="temp">22°c</h1>
+                <h2 class="city">New York</h2>
+            </div>
+            <div class="details"> 
                 <div class="col">
                     <img src="images/humidity.png">
                     <div>
@@ -32,13 +35,86 @@
                 <div class="col">
                     <img src="images/wind.png">
                     <div>
-                        <p class="wind">15 km/h</p>
+                        <p class="pressure">15 km/h</p>
+                        <p>Pressure</p>
+                    </div>
+                </div>
+                <div class="col">
+                    <img src="images/icons8-sea-50.png">
+                    <div>
+                        <p class="seaLevel">15 km/h</p>
+                        <p>Sea Level</p>
+                    </div>
+                </div>
+                <div class="col">
+                    <img src="images/icons8-ground-50.png">
+                    <div>
+                        <p class="groundLevel">15 km/h</p>
+                        <p>Ground Level</p>
+                    </div>
+                </div>
+                <div class="col">
+                    <img src="images/icons8-wind-50.png">
+                    <div>
+                        <p class="speed">15 km/h</p>
                         <p>Wind Speed</p>
                     </div>
                 </div>
+                <div class="col">
+                    <img src="images/icons8-wind-speed-43-47-50.png">
+                    <div>
+                        <p class="degree">15 km/h</p>
+                        <p>Wind Degree</p>
+                    </div>
+                </div>
+                <div class="col">
+                    <img src="images/icons8-wind-turbine-50.png">
+                    <div>
+                        <p class="gust">15 km/h</p>
+                        <p>Wind Gust</p>
+                    </div>
+                </div>
+                <div class="col">
+                    <img src="images/icons8-cloud-refresh-50.png">
+                    <div>
+                        <p class="description">15 km/h</p>
+                        <p>Cloud Feel</p>
+                    </div>
+                </div>
+                <div class="col">
+                    <img src="images/icons8-rain-50.png">
+                    <div>
+                        <p class="rain">15 km/h</p>
+                        <p>Rain level</p>
+                    </div>
+                </div>
+                <div class="col">
+                    <img src="images/icons8-visibility-50.png">
+                    <div>
+                        <p class="visibility">15 km/h</p>
+                        <p>Weather Visibility</p>
+                    </div>
+                </div>
+                <div class="col">
+                    <img src="images/icons8-longitude-50.png">
+                    <div>
+                        <p class="longitude">15 km/h</p>
+                        <p>Longitude</p>
+                    </div>
+                </div>
+                <div class="col">
+                    <img src="images/icons8-latitude-50.png">
+                    <div>
+                        <p class="latitude">15 km/h</p>
+                        <p>Latitude</p>
+                    </div>
+                </div>
+
+
 
             </div>
         </div>
+    </div>  
     </div>
     <script>
 
@@ -63,7 +139,17 @@
             document.querySelector(".city").innerHTML = data.name;
             document.querySelector(".temp").innerHTML = Math.round(data.main.temp) + "°c";
             document.querySelector(".humidity").innerHTML = data.main.humidity + "%";
-            document.querySelector(".wind").innerHTML = data.wind.speed + " km/h";
+            document.querySelector(".pressure").innerHTML = data.main.pressure + " km/h"; 
+            document.querySelector(".seaLevel").innerHTML = data.main.sea_level + " km/h";
+            document.querySelector(".groundLevel").innerHTML = data.main.grnd_level + " km/h";
+            document.querySelector(".speed").innerHTML = data.wind.speed + " km/h";
+            document.querySelector(".degree").innerHTML = data.wind.deg + " km/h";
+            document.querySelector(".gust").innerHTML = data.wind.gust + " km/h";    
+            document.querySelector(".description").innerHTML = data.weather[0].description; 
+            document.querySelector(".visibility").innerHTML = data.visibility + " meters";
+            document.querySelector(".longitude").innerHTML = data.coord.lon + " °";
+            document.querySelector(".latitude").innerHTML = data.coord.lat + " °";
+
 
             if(data.weather[0].main == "Clouds"){
                 weatherIcon.src = "images/clouds.png";
@@ -80,6 +166,24 @@
             document.querySelector(".weather").style.display = "block";
             document.querySelector(".error").style.display = "none";
             }
+
+
+        function checkWeather(data) {
+            const windElement = document.querySelector(".wind");
+            if (windElement) {
+                if (data.rain && data.rain["1h"] !== undefined) {
+                    windElement.innerHTML = data.rain["1h"] + " mm/h";
+                } else {
+                    windElement.innerHTML = "No rain data available";
+                }
+            }
+
+            const visibilityElement = document.querySelector(".visibility");
+            if (visibilityElement) {
+                visibilityElement.innerHTML = data.visibility + " meters";
+            }
+        }
+        
 
         }
 
